--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rbxts/maid",
-	"version": "1.0.0-ts.0",
+	"version": "1.0.0-ts.1",
 	"description": "Quenty's Maid class with types!",
 	"main": "Maid.lua",
 	"types": "Maid.d.ts",
@@ -21,5 +21,9 @@
 	},
 	"devDependencies": {
 		"@rbxts/types": "^1.0.320"
-	}
+	},
+  "files": [
+    "Maid.d.ts",
+    "Maid.lua"
+  ]
 }
