--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@rbxts/maid",
-	"version": "1.0.0-ts.1",
+	"version": "1.1.0",
 	"description": "Quenty's Maid class with types!",
 	"main": "Maid.lua",
 	"types": "Maid.d.ts",
@@ -20,7 +20,7 @@
 		"access": "public"
 	},
 	"devDependencies": {
-		"@rbxts/types": "^1.0.320"
+		"@rbxts/types": "^1.0.680"
 	},
 	"files": [
 		"Maid.d.ts",
